Worked on content

--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
 	<script type="text/javascript" src="js/vendor/jquery.queryloader2.js"></script>
 	<script type="text/javascript" src="js/vendor/waypoints.min.js"></script>
 	<script type="text/javascript" src="js/vendor/responsive.js"></script>
-	<script type="text/javascript" src="js/vendor/plugins.js"></script>
-	<script type="text/javascript" src="js/vendor/us.widgets.js"></script>
 
 	
 </head>
@@ -63,7 +61,7 @@
 					<!-- logo -->
 					<div class="w-logo" ng-controller="TemplateCtrl">
 						<div class="w-logo-h">
-							<a class="w-logo-link" href="#/">
+							<a class="w-logo-link" href="#">
 								<img class="w-logo-img" ng-src="{{general_info.logo_url}}" alt="CORSA">
 								<span class="w-logo-title">
 									<span class="w-logo-title-h">CORSA</span>
