--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	<script type="text/javascript" src="js/vendor/jquery.queryloader2.js"></script>
 	<script type="text/javascript" src="js/vendor/waypoints.min.js"></script>
 	<script type="text/javascript" src="js/vendor/responsive.js"></script>
+	<script type="text/javascript" src="js/vendor/plugins.js"></script>
 
 	
 </head>
