Try to handle title. Not working

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" ng-app="fdlmApp">
 <head>
 	<meta charset="UTF-8">
-	<title>CORSA Template</title>
+	<title>Faites de la Musique</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -70,7 +70,6 @@
 							</a>
 						</div>
 					</div>
-				
 					<!-- nav -->
 					<nav class="w-nav">
 						<div class="w-nav-h">
