--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,12 @@
     <!-- build:css css/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="bower_components/leaflet-dist/leaflet.css" />
     <link rel="stylesheet" href="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css" />
     <!-- endbower -->
     <!-- endbuild -->
+
+    <link rel="stylesheet" href="bower_components/leaflet-dist/leaflet.css" />
+
     <!-- build:css({.tmp,app}) css/main.css -->
 	<link rel="stylesheet" type="text/css" media="all" href="css/motioncss.css">
 	<link rel="stylesheet" type="text/css" media="all" href="css/motioncss-widgets.css">
@@ -126,7 +128,7 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 	<script type="text/javascript" src="js/vendor/modernizr.js"></script>
-
+    
     <!-- build:js js/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/jquery.js"></script>
@@ -138,12 +140,10 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-mocks/angular-mocks.js"></script>
-    <script src="bower_components/leaflet-dist/leaflet.js"></script>
-    <script src="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.js"></script>
-    <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
-    <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.min.js"></script>
     <!-- endbower -->
+    <!-- endbuild -->
 
+    <!-- build:js js/vendor2.js -->
 	<script type="text/javascript" src="js/vendor/mediaelement-and-player.js"></script>
 	<script type="text/javascript" src="js/vendor/jquery.easing.min.js"></script>
 	<script type="text/javascript" src="js/vendor/jquery.carousello.js"></script>
@@ -155,9 +155,13 @@
 	<script type="text/javascript" src="js/vendor/waypoints.min.js"></script>
 	<script type="text/javascript" src="js/vendor/responsive.js"></script>
 	<script type="text/javascript" src="js/vendor/plugins.js"></script>
-			
-    <!-- endbuild -->
-
+	<!-- endbuild -->
+	
+    <script src="bower_components/leaflet-dist/leaflet.js"></script>
+    <script src="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.js"></script>
+    <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
+    <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.min.js"></script>
+    
         <!-- build:js({.tmp,app}) js/scripts.js -->
         	<script type="text/javascript" src="js/app.js"></script>
 			<script type="text/javascript" src="js/controllers.js"></script>
