--- a/app/index.html
+++ b/app/index.html
@@ -157,7 +157,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-mocks/angular-mocks.js"></script>
-    <script src="bower_components/angular-smoothscroll/dist/scripts/c8742280.scripts.js"></script>
+    <script src="bower_components/angular-smoothscroll/angular-smoothScroll.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
