--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,18 @@
 	
 </head>
 <body class="l-body headertype_sticky headerpos_top hometype_fullscreen ng-cloak" ng-cloak>
+	<!-- Google Analytics -->
+    <script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-48771164-1', 'festival-ariegenzic.fr');
+		ga('send', 'pageview');
+
+	</script>
+	<!-- End Google Analytics -->
 	<div class='l-preloader'></div>
 	<!-- HEADER -->
 	<div class="l-header">
@@ -145,6 +157,7 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 	<script type="text/javascript" src="js/vendor/modernizr.js"></script>
+
     
     <!-- build:js js/vendor.js -->
     <!-- bower:js -->
@@ -160,6 +173,15 @@
     <script src="bower_components/angular-smoothscroll/dist/scripts/c8742280.scripts.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+    
+	<!-- Google Analytics Plugin -->
+	<script type="text/javascript" src="js/vendor/jquery.scrolldepth.min.js"></script>
+    <script type="text/javascript">
+    $(function() {
+		$.scrollDepth();
+	});
+    </script>
+	<!-- End Google Analytics Plugin -->
 
     <!-- build:js js/vendor2.js -->
 	<script type="text/javascript" src="js/vendor/mediaelement-and-player.js"></script>
