--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" ng-app="fdlmApp">
 <head>
 	<meta charset="UTF-8">
-	<title>Faites de la Musique</title>
+	<title>Ariege'n ZIC</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -30,7 +30,8 @@
 	<link rel="stylesheet" type="text/css" media="all" href="css/colors/color_2.css">
 	<link rel="stylesheet" type="text/css" media="all" href="css/custom.css">
     <!-- endbuild -->
-	
+
+	<link rel="icon" href="img/favicon.ico" />
 </head>
 <body class="l-body headertype_sticky headerpos_top hometype_fullscreen ng-cloak" ng-cloak>
 	<!-- Google Analytics -->
