--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,10 @@
     <!-- endbower -->
     <!-- endbuild -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <!--<link rel="stylesheet" href="css/bootstrap.css" />-->
+    <link rel="stylesheet" media="all" href="css/VerticalTimeline/css/component.css" />
+    <link rel="stylesheet" href="css/VerticalTimeline/css/default.css" />
+
     <link rel="stylesheet" href="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css" />
     <link rel="stylesheet" href="bower_components/leaflet-dist/leaflet.css" />
 
