--- a/app/index.html
+++ b/app/index.html
@@ -205,11 +205,13 @@
     <script src="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.js"></script>
     <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
     <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.min.js"></script>
-    
+    <script src="bower_components/leaflet-fullscreen/Control.FullScreen.js"></script>
+
         <!-- build:js({.tmp,app}) js/scripts.js -->
         	<script type="text/javascript" src="js/app.js"></script>
 			<script type="text/javascript" src="js/controllers.js"></script>
 			<script type="text/javascript" src="js/services.js"></script>
+			<script type="text/javascript" src="js/filters.js"></script>
         <!-- endbuild -->
 </body>
 </html>
