--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
-<html lang="en-US" ng-app="fdlmApp">
+<html lang="en-US" ng-app="fdlmApp" ng-controller="titleCtrl">
 <head>
 	<meta charset="UTF-8">
-	<title>Ariege'n ZIC</title>
+	<title>{{ Page.title() }}</title>
+	<meta name="description" content="A deux pas de Mirepoix (09), site en plein air bordé d'arbres et d'une rivière. Bar, Restauration et Camping.Programmation archi éclectique." />
 	<meta name="fragment" content="!">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
