--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" ng-app="fdlmApp" ng-controller="titleCtrl">
 <head>
 	<meta charset="UTF-8">
-	<title>{{ Page.title() }}</title>
+	<title ng-bind="Page.title()">Ariege'n Zic</title>
 	<meta name="description" content="A deux pas de Mirepoix (09), site en plein air bordé d'arbres et d'une rivière. Bar, Restauration et Camping.Programmation archi éclectique." />
 	<meta name="fragment" content="!">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
