--- a/app/index.html
+++ b/app/index.html
@@ -12,18 +12,18 @@
 	
 	
     <!-- build:css css/vendor.css -->
+	<link rel="stylesheet" type="text/css" media="all" href="css/custom.css">
     <!-- bower:css -->
     <!-- endbower -->
     <!-- endbuild -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <!--<link rel="stylesheet" href="css/bootstrap.css" />-->
-    <link rel="stylesheet" media="all" href="css/VerticalTimeline/css/component.css" />
-    <link rel="stylesheet" href="css/VerticalTimeline/css/default.css" />
-
+    
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />    
     <link rel="stylesheet" href="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css" />
     <link rel="stylesheet" href="bower_components/leaflet-dist/leaflet.css" />
 
     <!-- build:css({.tmp,app}) css/main.css -->
+    <link rel="stylesheet" type="text/css" media="all" href="css/VerticalTimeline/css/component.css" />
+    <link rel="stylesheet" type="text/css" href="css/VerticalTimeline/css/default.css" />
 	<link rel="stylesheet" type="text/css" media="all" href="css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" media="all" href="css/motioncss.css">
 	<link rel="stylesheet" type="text/css" media="all" href="css/motioncss-widgets.css">
@@ -141,7 +141,9 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-scrollto/angular-scrollto.js"></script>
+    <script src="bower_components/leaflet-dist/leaflet.js"></script>
     <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
+    <script src="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
@@ -164,11 +166,6 @@
 	<script type="text/javascript" src="js/vendor/plugins.js"></script>
 	<script type="text/javascript" src="js/vendor/jquery.easing.min.js"></script>  
 	<!-- endbuild -->
-	
-    <script src="bower_components/leaflet-dist/leaflet.js"></script>
-    <script src="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.js"></script>
-    <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.min.js"></script>
-
         <!-- build:js({.tmp,app}) js/scripts.js -->
         	<script type="text/javascript" src="js/app.js"></script>
 			<script type="text/javascript" src="js/controllers.js"></script>
