--- a/app/index.html
+++ b/app/index.html
@@ -22,9 +22,9 @@
 
     <link rel="stylesheet" href="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css" />
     <link rel="stylesheet" href="bower_components/leaflet-dist/leaflet.css" />
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- build:css({.tmp,app}) css/main.css -->
-	<link rel="stylesheet" type="text/css" media="all" href="css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" media="all" href="css/motioncss.css">
 	<link rel="stylesheet" type="text/css" media="all" href="css/motioncss-widgets.css">
 	<link rel="stylesheet" type="text/css" media="all" href="css/magnific-popup.css">
