Gaetan suggestion bugfix

--- a/app/index.html
+++ b/app/index.html
@@ -20,9 +20,11 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />    
     <link rel="stylesheet" href="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css" />
     <link rel="stylesheet" href="bower_components/leaflet-dist/leaflet.css" />
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- build:css({.tmp,app}) css/main.css -->
+    <link rel="stylesheet" type="text/css" media="all" href="css/VerticalTimeline/css/component.css" />
+    <link rel="stylesheet" type="text/css" href="css/VerticalTimeline/css/default.css" />
+	<link rel="stylesheet" type="text/css" media="all" href="css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" media="all" href="css/motioncss.css">
 	<link rel="stylesheet" type="text/css" media="all" href="css/motioncss-widgets.css">
 	<link rel="stylesheet" type="text/css" media="all" href="css/magnific-popup.css">
@@ -60,7 +62,7 @@
 					<!-- logo -->
 					<div class="w-logo" ng-controller="TemplateCtrl">
 						<div class="w-logo-h">
-							<a class="w-logo-link" href="#/">
+							<a class="w-logo-link" href="/#!/">
 								<img class="w-logo-img" ng-src="{{general_info.logo_url}}" alt="Ariege'n Zic">
 								<span class="w-logo-title">
 									<span class="w-logo-title-h">Ariege'n Zic</span>
